[GGC-421] Event Dialog responsiveness fixed on smaller devices

--- a/src/App.css
+++ b/src/App.css
@@ -479,7 +479,7 @@ h3 {
     text-transform: uppercase;
     letter-spacing: 3px;
   }
-  
+
   .event-dialog .rc-dialog-body__text h2 {
     color: var(--yellow);
     font-size: inherit;
@@ -489,7 +489,6 @@ h3 {
   }
 
   .event-dialog.center .rc-dialog-close {
-    top: 16px;
     color: white;
     font-size: 43px;
     font-weight: normal;
@@ -497,5 +496,17 @@ h3 {
     right: 10px;
     opacity: 1;
     cursor: pointer;
+    padding: 0 10px 0 0;
+  }
+}
+
+@media(max-width: 499px) {
+  .event-dialog .rc-dialog-body__text {
+    font-size: 30px;
+    line-height: 50px;
+  }
+
+  .event-dialog .gg-button--secondary {
+    min-width: 100%;
   }
 }
